# Work_Report_Generator

./: .env.example  .gitignore  README.md  __init__.py  config.py  main.py  pyproject.toml  test_simple_workflow.py  utils.py
clients/: hackmd_client.py
clients/llm/: __init__.py  base.py  claude_client.py  gemini_client.py  openai_client.py
tests/: test_config.py  test_integration.py
